[gd_scene load_steps=6 format=3 uid="uid://bld0tphrnxw0u"]

[ext_resource type="FontFile" uid="uid://cs4c5ckiubv28" path="res://Recursos/Fuentes/Stencilia-A.ttf" id="1_iteo3"]
[ext_resource type="Script" path="res://Codigo/Menu_Principal.gd" id="1_olncc"]
[ext_resource type="FontFile" uid="uid://cuwmtmdhl5634" path="res://Recursos/Fuentes/upheavtt.ttf" id="2_ra0xi"]

[sub_resource type="Theme" id="Theme_tdwl5"]
default_font = ExtResource("2_ra0xi")
default_font_size = 40

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_34vki"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_olncc")

[node name="Nombre" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -408.0
offset_top = -110.0
offset_right = 408.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(408, 74)
theme_override_colors/font_color = Color(0.87186, 0.87186, 0.87186, 1)
theme_override_colors/font_shadow_color = Color(0.0505295, 3.40405e-05, 0.0931311, 0.705882)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 16
theme_override_constants/shadow_offset_y = 16
theme_override_constants/outline_size = 32
theme_override_constants/shadow_outline_size = 16
theme_override_fonts/font = ExtResource("1_iteo3")
theme_override_font_sizes/font_size = 128
text = "HyperSphere"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Iniciar" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -207.5
offset_top = 137.5
offset_right = 207.5
offset_bottom = 165.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_ra0xi")
theme_override_font_sizes/font_size = 30
text = "Presione para continuar"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Botones1" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -158.0
offset_top = -240.0
offset_right = 158.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_tdwl5")

[node name="Jugar" type="Button" parent="Botones1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.918091, 0.918091, 0.918091, 1)
theme_override_colors/font_pressed_color = Color(0.800145, 0.593513, 1.92523e-07, 1)
theme_override_colors/font_hover_color = Color(0.487009, 0.487009, 0.487009, 1)
theme_override_colors/font_focus_color = Color(0.486275, 0.486275, 0.486275, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_34vki")
disabled = true
action_mode = 0
text = "Jugar"
flat = true

[node name="Configuracion" type="Button" parent="Botones1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.918091, 0.918091, 0.918091, 1)
theme_override_colors/font_pressed_color = Color(0.800145, 0.593513, 1.92523e-07, 1)
theme_override_colors/font_hover_color = Color(0.487009, 0.487009, 0.487009, 1)
theme_override_colors/font_focus_color = Color(0.486275, 0.486275, 0.486275, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_34vki")
disabled = true
action_mode = 0
text = "Configuracion"
flat = true

[node name="Extras" type="Button" parent="Botones1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.918091, 0.918091, 0.918091, 1)
theme_override_colors/font_pressed_color = Color(0.800145, 0.593513, 1.92523e-07, 1)
theme_override_colors/font_hover_color = Color(0.487009, 0.487009, 0.487009, 1)
theme_override_colors/font_focus_color = Color(0.486275, 0.486275, 0.486275, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_34vki")
disabled = true
action_mode = 0
text = "Extras"
flat = true

[node name="Salir" type="Button" parent="Botones1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.918091, 0.918091, 0.918091, 1)
theme_override_colors/font_pressed_color = Color(0.800145, 0.593513, 1.92523e-07, 1)
theme_override_colors/font_hover_color = Color(0.487009, 0.487009, 0.487009, 1)
theme_override_colors/font_focus_color = Color(0.486275, 0.486275, 0.486275, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_34vki")
disabled = true
action_mode = 0
text = "salir"
flat = true

[connection signal="pressed" from="Botones1/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="Botones1/Configuracion" to="." method="_on_configuracion_pressed"]
[connection signal="pressed" from="Botones1/Extras" to="." method="_on_extras_pressed"]
[connection signal="pressed" from="Botones1/Salir" to="." method="_on_salir_pressed"]
